--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
