--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PUBLIC_URL=https://voyagebuddy.net/
-REACT_APP_BACKEND_URL=http://89.116.32.10:5000
+REACT_APP_BACKEND_URL=https://voyagebuddybackend.onrender.com
